--- a/index.html
+++ b/index.html
@@ -1,123 +1,147 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!--Верхняя линия/навигация-->
     <header>
-       <nav>
-            <a href="/">
-                WebStudio
-            </a>
-            <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
-                <li><a href="/">Контакты</a></li>
-            </ul>
-       </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header> 
-    <!--Уникальный контент-->
-    <main>        
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
-        <section>
-            <h2>Особенности</h2>
-
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>
-                Чем мы занимаемся
-            </h2>
-                <ul>
-                    <li><img src="./img/box1.jpg" alt="работа на компьютере" width="370"></li>
-                    <li><img src="./img/box2.jpg" alt="работа на телефоне" width="370"></li>
-                    <li><img src="./img/box3.jpg" alt="работа на планшете" width="370"></li>
-                </ul>           
-        </section>
-        <section>
-            <h2>
-                Наша команда
-            </h2>
-            <ul>
-                <li>
-                    <img src="./img/img1.jpg" alt="Парень в бордовой рубашке" width="270">
-                    <h3>
-                        Игорь Демьяненко
-                    </h3>
-                    <p>
-                        Product Designer
-                    </p>
-                </li>
-                <li>
-                    <img src="./img/img2.jpg" alt="Девушка блондинка" width="270">
-                    <h3>
-                        Ольга Репина
-                    </h3>
-                    <p>
-                        Frontend Developer
-                    </p>
-                </li>
-                    <li>
-                    <img src="./img/img3.jpg" alt="Парень в голубой рубашке" width="270">
-                    <h3>
-                        Николай Тарасов
-                    </h3>
-                    <p>
-                        Marketing
-                    </p>
-                </li>
-                <li>
-                    <img src="./img/img4.jpg" alt="Парень в черной футболке" width="270">
-                   <h3>
-                        Михаил Ермаков
-                   </h3>
-                    <p>
-                        UI Designer
-                    </p>
-                </li>
-            </ul>
-        </section>
-   </main>
-   <!--Подвал-->
-   <footer>
-        <a href="/">
-            WebStudio
+      <nav>
+        <a href="/" class="logo">
+          <span class="logo-first-part">Web</span>Studio
         </a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>       
-   </footer>
-</body>
+        <ul class="list menu-nav">
+          <li><a href="/" class="link">Студия</a></li>
+          <li><a href="/" class="link">Портфолио</a></li>
+          <li><a href="/" class="link">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="list contact">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <!--Уникальный контент-->
+    <main>
+      <div class="hero">
+        <section>
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="btn">Заказать услугу</button>
+        </section>
+      </div>
+      <section class="section">
+        <h2>Особенности</h2>
+
+        <ul class="list">
+          <li>
+            <h3 class="section-title">Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="section-title">Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="section-title">Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="section-title">Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
+          <li>
+            <img src="./img/box1.jpg" alt="работа на компьютере" width="370" />
+          </li>
+          <li>
+            <img src="./img/box2.jpg" alt="работа на телефоне" width="370" />
+          </li>
+          <li>
+            <img src="./img/box3.jpg" alt="работа на планшете" width="370" />
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="./img/img1.jpg"
+              alt="Парень в бордовой рубашке"
+              width="270"
+            />
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./img/img2.jpg" alt="Девушка блондинка" width="270" />
+            <h3 class="team-title">Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./img/img3.jpg"
+              alt="Парень в голубой рубашке"
+              width="270"
+            />
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/img4.jpg"
+              alt="Парень в черной футболке"
+              width="270"
+            />
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Подвал-->
+    <footer class="footer">
+      <a href="/" class="logo">
+        <span class="logo-first-part">Web</span
+        ><span class="logo-second-part">Studio</span>
+      </a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="list">
+        <li>
+          <a href="mailto:info@example.com" class="contact-link"
+            >info@example.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
