Добавляет страницу портфолио

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <!--Верхняя линия/навигация-->
     <header>
       <nav>
-        <a href="/" class="logo">
-          <span class="logo-first-part">Web</span>Studio
-        </a>
+        <a href="/" class="logo">Web<span class="logo-header">Studio</span> </a>
         <ul class="list menu-nav">
-          <li><a href="/" class="link">Студия</a></li>
-          <li><a href="/" class="link">Портфолио</a></li>
-          <li><a href="/" class="link">Контакты</a></li>
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list contact">
@@ -41,7 +39,6 @@
       </div>
       <section class="section">
         <h2>Особенности</h2>
-
         <ul class="list">
           <li>
             <h3 class="section-title">Внимание к деталям</h3>
@@ -127,19 +124,18 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <a href="/" class="logo">
-        <span class="logo-first-part">Web</span
-        ><span class="logo-second-part">Studio</span>
-      </a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="/" class="logo">Web<span class="logo-footer">Studio</span> </a>
+      <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
       <ul class="list">
         <li>
-          <a href="mailto:info@example.com" class="contact-link"
+          <a href="mailto:info@example.com" class="contact-link link-footer"
             >info@example.com</a
           >
         </li>
         <li>
-          <a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a>
+          <a href="tel:+380991111111" class="contact-link link-footer"
+            >+38 099 111 11 11</a
+          >
         </li>
       </ul>
     </footer>
