--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Верхняя линия/навигация-->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-nav">
         <a href="/" class="logo">Web<span class="logo-header">Studio</span> </a>
         <ul class="list menu-nav">
           <li><a href="" class="link current">Студия</a></li>
@@ -18,7 +24,7 @@
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list contact">
+      <ul class="list contacts">
         <li>
           <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
@@ -34,44 +40,44 @@
       <div class="hero">
         <section>
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn">Заказать услугу</button>
+          <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
       </div>
-      <section class="section">
+      <section class="benefits">
         <h2>Особенности</h2>
         <ul class="list">
           <li>
-            <h3 class="section-title">Внимание к деталям</h3>
-            <p>
+            <h3 class="benefits-title">Внимание к деталям</h3>
+            <p class="benefits-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="section-title">Пунктуальность</h3>
-            <p>
+            <h3 class="benefits-title">Пунктуальность</h3>
+            <p class="benefits-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="section-title">Планирование</h3>
-            <p>
+            <h3 class="benefits-title">Планирование</h3>
+            <p class="benefits-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="section-title">Современные технологии</h3>
-            <p>
+            <h3 class="benefits-title">Современные технологии</h3>
+            <p class="benefits-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
+      <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
             <img src="./img/box1.jpg" alt="работа на компьютере" width="370" />
@@ -93,13 +99,13 @@
               alt="Парень в бордовой рубашке"
               width="270"
             />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-prof">Product Designer</p>
           </li>
           <li>
             <img src="./img/img2.jpg" alt="Девушка блондинка" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-prof">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -107,8 +113,8 @@
               alt="Парень в голубой рубашке"
               width="270"
             />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-prof">Marketing</p>
           </li>
           <li>
             <img
@@ -116,8 +122,8 @@
               alt="Парень в черной футболке"
               width="270"
             />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-prof">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -126,14 +132,14 @@
     <footer class="footer">
       <a href="/" class="logo">Web<span class="logo-footer">Studio</span> </a>
       <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="list">
+      <ul class="list footer-contacts">
         <li>
-          <a href="mailto:info@example.com" class="contact-link link-footer"
+          <a href="mailto:info@example.com" class="contact-link footer-link"
             >info@example.com</a
           >
         </li>
         <li>
-          <a href="tel:+380991111111" class="contact-link link-footer"
+          <a href="tel:+380991111111" class="contact-link footer-link"
             >+38 099 111 11 11</a
           >
         </li>
