--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Верхняя линия/навигация-->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-nav">
         <a href="/" class="logo">Web<span class="logo-header">Studio</span> </a>
         <ul class="list menu-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -18,7 +24,7 @@
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list contact">
+      <ul class="list contacts">
         <li>
           <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
@@ -31,20 +37,20 @@
     </header>
     <!--Уникальный контент-->
     <main>
-      <h1>Контент портфолио</h1>
+      <h1>портфолио</h1>
     </main>
     <!--Подвал-->
     <footer class="footer">
       <a href="/" class="logo">Web<span class="logo-footer">Studio</span> </a>
       <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="list">
+      <ul class="list footer-contacts">
         <li>
-          <a href="mailto:info@example.com" class="contact-link link-footer"
+          <a href="mailto:info@example.com" class="contact-link footer-link"
             >info@example.com</a
           >
         </li>
         <li>
-          <a href="tel:+380991111111" class="contact-link link-footer"
+          <a href="tel:+380991111111" class="contact-link footer-link"
             >+38 099 111 11 11</a
           >
         </li>
