--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,16 @@
     </header>
     <!--Уникальный контент-->
     <main>
-      <h1>портфолио</h1>
+      <section>
+        <h1>портфолио</h1>
+        <ul class="list filter">
+          <li><button type="button" class="filter-btn">Все</button></li>
+          <li><button type="button" class="filter-btn">Веб-сайты</button></li>
+          <li><button type="button" class="filter-btn">Приложения</button></li>
+          <li><button type="button" class="filter-btn">Дизайн</button></li>
+          <li><button type="button" class="filter-btn">Маркетинг</button></li>
+        </ul>
+      </section>
     </main>
     <!--Подвал-->
     <footer class="footer">
