Добавляет картинки к портфолио

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
       </div>
       <section class="benefits">
-        <h2>Особенности</h2>
+        <h2 class="visually-hidden">Особенности</h2>
         <ul class="list">
           <li>
             <h3 class="benefits-title">Внимание к деталям</h3>
