--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,62 @@
     <!--Уникальный контент-->
     <main>
       <section>
-        <h1>портфолио</h1>
+        <h1 class="visually-hidden">портфолио</h1>
         <ul class="list filter">
           <li><button type="button" class="filter-btn">Все</button></li>
           <li><button type="button" class="filter-btn">Веб-сайты</button></li>
           <li><button type="button" class="filter-btn">Приложения</button></li>
           <li><button type="button" class="filter-btn">Дизайн</button></li>
           <li><button type="button" class="filter-btn">Маркетинг</button></li>
+        </ul>
+        <ul class="list">
+          <li>
+            <img
+              src="./img/project1.jpg"
+              alt="Страница Веб-сайта"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/project2.jpg"
+              alt="Баскетболисты в прыжке"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/project3.jpg"
+              alt="Логотип ресторана с рыбой"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./img/project4.jpg" alt="Черные наушники" width="370" />
+          </li>
+          <li>
+            <img src="./img/project5.jpg" alt="Две коробочки" width="370" />
+          </li>
+          <li>
+            <img
+              src="./img/project6.jpg"
+              alt="Монитор с информацией"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./img/project7.jpg" alt="Разворот журнала" width="370" />
+          </li>
+          <li>
+            <img src="./img/project8.jpg" alt="Лейба с надписью" width="370" />
+          </li>
+          <li>
+            <img
+              src="./img/project9.jpg"
+              alt="Реклама на ноутбуке"
+              width="370"
+            />
+          </li>
         </ul>
       </section>
     </main>
