--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
         <ul class="list">
-          <li>
+          <li class="team-card">
             <img
               src="./img/img1.jpg"
               alt="Парень в бордовой рубашке"
@@ -102,12 +102,12 @@
             <h3 class="team-name">Игорь Демьяненко</h3>
             <p class="team-prof">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./img/img2.jpg" alt="Девушка блондинка" width="270" />
             <h3 class="team-name">Ольга Репина</h3>
             <p class="team-prof">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./img/img3.jpg"
               alt="Парень в голубой рубашке"
@@ -116,7 +116,7 @@
             <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-prof">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./img/img4.jpg"
               alt="Парень в черной футболке"
