--- a/portfolio.html
+++ b/portfolio.html
@@ -48,51 +48,95 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./img/project1.jpg"
-              alt="Страница Веб-сайта"
-              width="370"
-            />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project1.jpg"
+                alt="Страница Веб-сайта"
+                width="370"
+              />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/project2.jpg"
-              alt="Баскетболисты в прыжке"
-              width="370"
-            />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project2.jpg"
+                alt="Баскетболисты в прыжке"
+                width="370"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/project3.jpg"
-              alt="Логотип ресторана с рыбой"
-              width="370"
-            />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project3.jpg"
+                alt="Логотип ресторана с рыбой"
+                width="370"
+              />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
           <li>
-            <img src="./img/project4.jpg" alt="Черные наушники" width="370" />
+            <a href="" class="portfolio-link">
+              <img src="./img/project4.jpg" alt="Черные наушники" width="370" />
+              <h2 class="portfolio-title">Проект Prime</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img src="./img/project5.jpg" alt="Две коробочки" width="370" />
+            <a href="" class="portfolio-link">
+              <img src="./img/project5.jpg" alt="Две коробочки" width="370" />
+              <h2 class="portfolio-title">Проект Boxes</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/project6.jpg"
-              alt="Монитор с информацией"
-              width="370"
-            />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project6.jpg"
+                alt="Монитор с информацией"
+                width="370"
+              />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img src="./img/project7.jpg" alt="Разворот журнала" width="370" />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project7.jpg"
+                alt="Разворот журнала"
+                width="370"
+              />
+              <h2 class="portfolio-title">Издание Limited Edition</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="./img/project8.jpg" alt="Лейба с надписью" width="370" />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project8.jpg"
+                alt="Лейба с надписью"
+                width="370"
+              />
+              <h2 class="portfolio-title">Проект LAB</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/project9.jpg"
-              alt="Реклама на ноутбуке"
-              width="370"
-            />
+            <a href="" class="portfolio-link">
+              <img
+                src="./img/project9.jpg"
+                alt="Реклама на ноутбуке"
+                width="370"
+              />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
